@@ -522,7 +522,12 @@ verilog/parser_sv.v:203: VAR  'parameter' 'SZ' 'module' '' '' '' '4'
 verilog/parser_sv.v:204: VAR  'port' 'o_sized' 'module' '' 'logic [SZ-1:0]' '' ''
 verilog/parser_sv.v:204: PORT  'o_sized' 'module' 'output' 'logic [SZ-1:0]' '' '1'
 verilog/parser_sv.v:205: ENDMODULE  'endmodule'
-verilog/parser_sv.v:208: VAR  'var' 'arrayed' 'class' '' 'byte' '' ''
-verilog/parser_sv.v:209: VAR  'var' 'b' 'class' '' 'bit' '' ''
+verilog/parser_sv.v:208: VAR  'var' 'arrayed' 'class' '' 'rand byte' '' ''
+verilog/parser_sv.v:209: VAR  'var' 'b' 'class' '' 'rand bit' '' ''
 verilog/parser_sv.v:216: TASK  'task' 'examples'
 verilog/parser_sv.v:220: ENDTASKFUNC  'endtask'
+verilog/parser_sv.v:221: FUNCTION  'function' 'foo1' 'bit'
+verilog/parser_sv.v:222: FUNCTION  'function' 'foo2' 'void'
+verilog/parser_sv.v:223: VAR  'var' 'foo3' 'class' '' 'protected static string' '' ''
+verilog/parser_sv.v:224: FUNCTION  'function' 'foo4' 'bit'
+verilog/parser_sv.v:225: VAR  'var' 'foo5' 'class' '' 'static local bit' '[string]' ''
